--- a/src/Ecoffe.Frontend/src/app/views/products/products.component.css
+++ b/src/Ecoffe.Frontend/src/app/views/products/products.component.css
@@ -3,6 +3,10 @@ body{
     padding: 0;
 }
 
+.corpo{
+    display: flex;
+}
+
 #menu-esq{
     width: 20%;
 }
@@ -20,12 +24,26 @@ h3{
     position: relative;
     bottom: 100%;
     width: 50%;
-    left: 40%;
+    left: 15%;
+    
 }
-#pproduto1{
-    position: absolute;
-    bottom: 100%;
+
+mat-card{
+    width: 70%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-style: solid;
+    border-color: rgb(92, 92, 92);
+    border-radius: 20px;
+    border-width: 2px;
 }
+
+mat-card:hover{
+    background-color: aliceblue;
+    border-color: rgb(126, 125, 125);
+    cursor: pointer;
+}
+
 img{
     width: 150px;
     padding: 10px;
