--- a/src/Ecoffe.Frontend/src/app/views/products/products.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/products/products.component.html
@@ -1,59 +1,78 @@
 <app-header></app-header>
 
+<div class="corpo">
+    <div id="menu-esq">
+        <h3 style="text-align: center;">Filtrar Produtos</h3>
+        <ul>
+            <h4>Por Método</h4>
+            <li>Café com grãos (129)</li>
+            <li>Café moído (52)</li>
+            <li>Cápsula de Café (78)</li>
+            <li>Drip Coffee (11)</li>
+            <li>Sachê de Cafê (3)</li>
+            <li>Infusores (6)</li>
+            <li>Sóluveis (2)</li>
+            <li>Cold Vrew (2)</li>
+        </ul>
 
-<nav id="menu-esq">
-    <h3 style="text-align: center;">Filtrar Produtos</h3>
-    <ul>
-        <h4>Por Método</h4>
-        <li>Café com grãos (129)</li>
-        <li>Café moído (52)</li>
-        <li>Cápsula de Café (78)</li>
-        <li>Drip Coffee (11)</li>
-        <li>Sachê de Cafê (3)</li>
-        <li>Infusores (6)</li>
-        <li>Sóluveis (2)</li>
-        <li>Cold Vrew (2)</li>
-    </ul>
+        <ul>
+            <h4>Intensidade</h4>
+            <li>Café Suave (12)</li>
+            <li>Café Médio (23)</li>
+            <li>Café Intenso (17)</li>
+        </ul>
 
-    <ul>
-        <h4>Intensidade</h4>
-        <li>Café Suave (12)</li>
-        <li>Café Médio (23)</li>
-        <li>Café Intenso (17)</li>
-    </ul>
+        <ul>
+            <h4>Tipo</h4>
+            <li>Café Aromatizado (9)</li>
+            <li>Café Certificado (54)</li>
+            <li>Café Descafeinado (8)</li>
+            <li>Café Organico (10)</li>
+            <li>Café Premiado (22)</li>
+            <li>Microlote (22)</li>
+        </ul>
+        <hr>
+        <ul>
+            <h4>Marca</h4>
+            <li><input type="checkbox">.BR (10)</li>
+            <li><input type="checkbox">3 Corações (4)</li>
+            <li><input type="checkbox">4 Beans Coffee Co. (1)</li>
+            <li><input type="checkbox">Astro (9)</li>
+            <li><input type="checkbox">Baggio (16)</li>
+            <li><input type="checkbox">Barista (2)</li>
+        </ul>
+    </div>
 
-    <ul>
-        <h4>Tipo</h4>
-        <li>Café Aromatizado (9)</li>
-        <li>Café Certificado (54)</li>
-        <li>Café Descafeinado (8)</li>
-        <li>Café Organico (10)</li>
-        <li>Café Premiado (22)</li>
-        <li>Microlote (22)</li>
-    </ul>
-    <hr>
-    <ul>
-        <h4>Marca</h4>
-        <li><input type="checkbox">.BR (10)</li>
-        <li><input type="checkbox">3 Corações (4)</li>
-        <li><input type="checkbox">4 Beans Coffee Co. (1)</li>
-        <li><input type="checkbox">Astro (9)</li>
-        <li><input type="checkbox">Baggio (16)</li>
-        <li><input type="checkbox">Barista (2)</li>
-    </ul>
-</nav>
+    <div id="produtos">
+        <mat-card>
+            <p>Identificação: {{product.id}}</p>
+            <h1>{{product.nome}}</h1>
+            <p>R${{product.valor}}</p>
+        </mat-card>
 
-<div id="produtos">
-    <mat-card>
-        <p>Identificação: {{product.id}}</p>
-        <h1>{{product.nome}}</h1>
-        <p>R${{product.valor}}</p>
-    </mat-card>
-    <mat-card>
-        <p>Identificação: {{product.id}}</p>
-        <h1>{{product.nome}}</h1>
-        <p>R${{product.valor}}</p>
-    </mat-card>
+        <mat-card>
+            <p>Identificação: {{product2.id}}</p>
+            <h1>{{product2.nome}}</h1>
+            <p>R${{product2.valor}}</p>
+        </mat-card>
+
+        <mat-card>
+            <p>Identificação: {{product3.id}}</p>
+            <h1>{{product3.nome}}</h1>
+            <p>R${{product3.valor}}</p>
+        </mat-card>
+
+        <mat-card>
+            <p>Identificação: {{product4.id}}</p>
+            <h1>{{product4.nome}}</h1>
+            <p>R${{product4.valor}}</p>
+        </mat-card>
+
+        <mat-card>
+            <p>Identificação: {{product5.id}}</p>
+            <h1>{{product5.nome}}</h1>
+            <p>R${{product5.valor}}</p>
+        </mat-card>
+    </div>
 </div>
-
 <app-footer></app-footer>
