inicio purchase details

--- a/src/Ecoffe.Frontend/src/app/views/purchase/purchase.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/purchase/purchase.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 
-<app-purchase-finish></app-purchase-finish>
+<app-purchase-finish *ngIf="false"></app-purchase-finish>
 
-<app-footer></app-footer>
+<app-purchase-details></app-purchase-details>
