--- a/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.css
@@ -23,3 +23,9 @@
     display: inline-grid;
     margin-left: 10px;
 }
+
+.totalValue{
+    margin-left: 0.75rem;
+    font-size: 20px;
+    font-weight: 500;
+}
