--- a/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.html
@@ -2,6 +2,8 @@
     <mat-card-title>Detalhes da compra</mat-card-title>
     <p>Data da compra: {{compra.dataCompra | date: 'dd/MM/yyyy'}}</p>
     <p>Status da compra: {{statusCompraLabel.get(compra.statusCompra)}}</p>
+    <p>Forma de pagamento: {{formaPagamentoLabel.get(compra.formaPagamento)}} </p>
+    <p *ngIf="compra.formaPagamento == 0 || compra.formaPagamento == 1">Cartão utilizado: {{compra.cartao?.bandeira | uppercase}}, Final {{compra.cartao?.numero?.substr(12,4)}} - Titular {{compra.cartao?.nomeTitular}}</p>
 </mat-card>
 <mat-card>
     <mat-card-title>Produtos</mat-card-title>
@@ -18,4 +20,5 @@
             </div> 
         </div> 
     </mat-card>
+    <p class="totalValue">Valor: {{compra.valorBruto | currency: 'BRL'}}</p>
 </mat-card>
