endereco no purchase details

--- a/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.html
@@ -1,9 +1,10 @@
 <mat-card>
     <mat-card-title>Detalhes da compra</mat-card-title>
     <p>Data da compra: {{compra.dataCompra | date: 'dd/MM/yyyy'}}</p>
-    <p>Status da compra: {{statusCompraLabel.get(compra.statusCompra)}}</p>
+    <p>Status da compra: <b>{{statusCompraLabel.get(compra.statusCompra)}}</b></p>
     <p>Forma de pagamento: {{formaPagamentoLabel.get(compra.formaPagamento)}} </p>
     <p *ngIf="compra.formaPagamento == 0 || compra.formaPagamento == 1">Cartão utilizado: {{compra.cartao?.bandeira | uppercase}}, Final {{compra.cartao?.numero?.substr(12,4)}} - Titular {{compra.cartao?.nomeTitular}}</p>
+    <p *ngIf="compra.enderecoId">Endereço: {{compra.endereco?.rua}}, {{compra.endereco?.numero}}, {{compra.endereco?.bairro}}, {{compra.endereco?.cidade}} - {{compra.endereco?.uf}}. CEP {{compra.endereco?.cep! | mask: '00000-000'}}</p>
 </mat-card>
 <mat-card>
     <mat-card-title>Produtos</mat-card-title>
