purchase details estilo completo

--- a/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.html
@@ -1,3 +1,7 @@
+<mat-card style="background-color: #ADFDBC;">
+    <mat-card-title>Sucesso!</mat-card-title>
+    <p>Compra realizada com sucesso! Aguarde atualizaçõe sobre o <b>status da compra</b>.</p>
+</mat-card>
 <mat-card>
     <mat-card-title>Detalhes da compra</mat-card-title>
     <p>Data da compra: {{compra.dataCompra | date: 'dd/MM/yyyy'}}</p>
