desabilitando botao finalizar do carrinho caso nao haja items

--- a/src/Ecoffe.Frontend/src/app/components/cart-sidenav/cart-sidenav.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/cart-sidenav/cart-sidenav.component.html
@@ -27,7 +27,7 @@
         </mat-card>   
         <div class="cartBottom">
             <p>Total: {{totalValue | currency:'BRL'}}</p>
-            <button routerLink="/purchase" mat-flat-button color="primary">
+            <button routerLink="/purchase" mat-flat-button color="primary" [disabled]="cart.produtos.length == 0">
                 Finalizar compra
             </button>
         </div>
