inicio historico de produtos

--- a/src/Ecoffe.Frontend/src/app/views/account/account.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/account/account.component.html
@@ -8,6 +8,8 @@
 
 <app-personal-info *ngIf="areaType == 1"></app-personal-info>
 
+<app-purchase-history *ngIf="areaType == 2"></app-purchase-history>
+
 <app-card-list *ngIf="areaType == 3"></app-card-list>
 
 <app-footer></app-footer>
