Ajuste Products-details
Ajuste Products-details, corrigido, agora todas img abrem os detalhes dos produtos

--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -32,15 +32,15 @@
 <!-- Card 2 -->
 <mat-card>
     <section class="Container">
-        <div>
+        <div (click)="abre_mod()">
             <img mat-card-image src="../../../assets/img4.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
-        <div>
+        <div (click)="abre_mod()">
             <img mat-card-image src="../../../assets/img5.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
-        <div>
+        <div (click)="abre_mod()">
             <img mat-card-image src="../../../assets/img6.png" alt="img produto mais votado" class="imagem">
             <p>Titulo produto</p>
         </div>
