--- a/src/Ecoffe.Frontend/src/app/components/purchase-history/purchase-history.component.html
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-history/purchase-history.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-title>Compras</mat-card-title>
-    <mat-card *ngFor="let compra of compras">
+    <mat-card class="purchase" *ngFor="let compra of compras" (click)="openPurchaseDetailsModal()">
         <b>{{statusCompraLabel.get(compra.statusCompra)}}</b> - {{compra.dataCompra | date: 'dd/MM/yyyy'}} - {{compra.valorBruto | currency:'BRL'}} - {{formaPagamentoLabel.get(compra.formaPagamento)}}
     </mat-card>
 </mat-card>
