--- a/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.css
+++ b/src/Ecoffe.Frontend/src/app/components/purchase-details/purchase-details.component.css
@@ -29,3 +29,16 @@
     font-size: 20px;
     font-weight: 500;
 }
+
+
+@media (max-width: 550px) {
+    .mat-card{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+    .productMatCart{
+        margin-left: 0.1px;
+        margin-right: 0.1px;
+    }
+}
