--- a/src/Ecoffe.Frontend/src/app/views/products/products.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/products/products.component.html
@@ -44,6 +44,11 @@
     </div>
 
     <div id="produtos">
+
+        <mat-card class="C-Loader">
+
+        </mat-card>
+
         <mat-card>
             <p>Identificação: {{product.id}}</p>
             <h1>{{product.nome}}</h1>
