--- a/src/Ecoffe.Frontend/src/app/views/about/about.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/about/about.component.html
@@ -1,31 +1,39 @@
 <app-header></app-header>
 <app-footer></app-footer>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <title>Web Hardware</title>
-</head>
-<body>
-    <div class="linha"></div>
-    <div class="contentSobre">
-        <div class="white, texto-intro">
-            <h1 class="white">Olá, caro Usuário.</h1>
-            <p class="texto-intro">Este projeto foi desenvolvido como uma atividade avaliativa para a conclusão do 2º Semestre do curso de Análise e Desenvolvimento de Sistemas, pela PUC-Minas. Dentre as várias especificações que podem ser encontradas na <a href="https://github.com/ICEI-PUC-Minas-PMV-ADS/pmv-ads-2021-2-e2-proj-int-t3-ecoffe-cafenine" target="_blank">documentação do site</a>, A arqueitetura desta aplicação foi desenvolvida no frontend utilizando Angular e backend com Asp.NET, comunicando com o banco de dados na nuvem do Microsoft Azure usando Entity Framework.</p>
-        </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
+                <title>Sobre</title>
+    </head>
+    <body>
+        <h1><br><br>CAFÉNINE<br><br></h1>
+        <h2>"Para nós, a CAFÉNINE é muito mais que um local, é o ponto de encontro do melhor que queremos para o nosso dia."</h2>
+        <h2>A nossa história é construída pelas pessoas com as quais decidimos nos importar. CAFÉNINE é uma ECOMMERCE de CAFÉS fundada no "Brasil" por um grupo de Estudantes.<br> Cresceu pelo mundo e já recebeu inúmeras visitas online. Na sua concepção o "grupo" quis deixar claro a vocação da marca de querer ser parte da vida dos clientes. Por isso os espaços da marca tinham que juntar aconchego, beleza e <br> modernidade. Sempre com um cardápio moldado que respeitasse o gosto dos clientes locais, para que sempre tivessem vontade de ir na loja.</h2>
+
+        <h2><br>Este projeto foi desenvolvido como uma atividade avaliativa para a conclusão do 2º Semestre do curso de Análise e Desenvolvimento de Sistemas, pela PUC-Minas.<br> Dentre as várias especificações que podem ser encontradas na <a href="https://github.com/ICEI-PUC-Minas-PMV-ADS/pmv-ads-2021-2-e2-proj-int-t3-ecoffe-cafenine" target="_blank" style="text-decoration: none;">documentação do site</a>, A arqueitetura desta aplicação foi desenvolvida no frontend utilizando Angular e <br> backend com Asp.NET, comunicando com o  banco de dados na nuvem do Microsoft Azure usando Entity Framework.</h2>
+        <br><h2 style="font-size: 50px;">GITHUB <img class="github" src="/assets/github"></h2>
+         <br><span><a href="https://github.com/VictorLopes1010">Victor Lopes</a>,&nbsp; <a href="https://github.com/joaosena19">João Sena</a>,&nbsp; <a href="https://github.com/gilidio8">Gabriel Lidio</a>,&nbsp; <a href="https://github.com/lipebohmmitre">Felipe Bohm</a>,&nbsp; <a href="https://github.com/IagoIann">Iago Iann</a>,&nbsp; <a href="https://github.com/YuriWiter-dev">Yuri Witter.</a></span>
+    
         <div class="areaContato">
             <form>
-                <h1 class="white, texto-final">Entre em contato</h1>
-                <input id="nomeEmail" type="text" placeholder="Nome" required>
-                <input id="telefoneEmail" placeholder="Telefone" required maxlength="11">
-                <input id="emailEmail" type="email" placeholder="Email" required>
-                <textarea id="corpoEmail" placeholder="Deixe sua opinião"></textarea>
-                <input type="submit" onclick="EnviarEmail();" value="Enviar">  
+                <h1>Entre em contato</h1>
+                <input id="nomeEmail" type="text" placeholder="  Nome :" required>
+                <input id="telefoneEmail" placeholder="  Telefone :" required maxlength="11">
+                <input id="emailEmail" type="email" placeholder="  Email :" required>
+                <textarea id="corpoEmail" placeholder="  Deixe sua opinião :"></textarea>
+                <input type="submit" onclick="EnviarEmail();" value="  Enviar">
               </form>
         </div>
+        <div class="cardabout">
 
-    </div>
-</body>
+        </div>
+        
+    </body>
+    
+        
+    
+    
 </html>
