--- a/src/Ecoffe.Frontend/src/app/views/about/about.component.css
+++ b/src/Ecoffe.Frontend/src/app/views/about/about.component.css
@@ -1,46 +1,119 @@
+@import url('https://fonts.googleapis.com/css2?family=Ovo&display=swap');
 
-
-
-.texto-intro{
-    padding-top: 50px;
-    padding-right:10px;
+body {
+    background-color: #242424;
+    font-family: 'Ovo', serif;
     color: white;
-    padding-left: 30px;
-    font-size: 20px;
+    font-size: 30px;
+}
+
+
+.cardabout {
+    height: 80%;
+    width: 100%;
+    border-radius: 2px;
+    margin-top: 50px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(/assets/cardabout);
+    background-color: #242424;
     
-
+    
 }
-.texto-final{
-    padding-right:10px;
-    color: white;
-    padding-left: 30px;
-}
-
-
-.contentSobre{
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 10% 0;
-    background-color: #2e2d2d;
-    height: 70%;
+h1 {
+    font-family:'Ovo', serif;
+    color: white ;
+    font-size: 50px;
+    text-align: center;
+    font-weight: 400;
 }
 
+h2 {
+    color:white;
+    font-size: 24px;
+    text-align: center;
+    padding: 5px;
+    line-height: 30px;
+    font-family: 'Ovo', serif;
+}
+
+
+.areaContato h1{
+
+    font-family: 'Ovo', serif;
+    color: #242424;
+
+}
+
+form {
+    padding: 30px 4%;
+    box-shadow: 0 0 5px rgba(0,0, 0, 0.3);
+}
+
+#corpoEmail {
+    font-family: 'Ovo', serif;
+}
 .areaContato{
-    width: 40%;
-    float: right;
+    width: 20%;
+    float: left;
     display: block;
+    margin-left: 100px;
+    margin-top: 110px;
+    font-family: 'Ovo', serif;
+    color: #242424;
+
+}
+
+.github {
+    width: 50px;
+    border-radius: 10px;
+    position: relative;
+    margin-bottom: -5px;
+    
+    
+}
+
+span {
+    font-size: 25px;
+    text-align: center;
+    position: relative;
+    margin-left: 250px;
+
+   
+}
+
+.areaContato textarea {
+    width: 40%;
+    height: 32px;
+    border-radius: 5px;
+    outline: none;
+    resize: none;
+    font-size: 16px;
+    font-family: 'Ovo', serif;
+    border-color: white;
+    
+    
 }
 
 .areaContato form input{
-    width: 100%;
+    width: 50%;
     height: 30px;
     margin: 5px;
+    font-family: 'Ovo', serif;
+    border: 0;
+    border-bottom: hidden;
+    border-radius: 5px;
+    
+    
 }
+
 
 .areaContato form input[type="submit"]{
     text-align: center;
-    color: #f9f9f9;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
+    border-radius: 5px;
+    font-family: 'Ovo', serif;
     font-size: 15px;
     text-transform: uppercase;
     font-weight: 700;
@@ -49,8 +122,7 @@
     cursor: pointer;
     width: 150px;
     height: 40px;
-    background-color: #b6b6b6;
-    box-shadow:0 5px 0  #808080;
+    background-color: #242424;
 }
 
 .areaContato form input[type="submit"]:hover{
@@ -64,18 +136,6 @@
     margin: 5px;
 
 }
-
-.areaSobre{
-    width: 60%;
-    float: left;
-    position: relative;
-}
-
-
-
-
 @media (max-width:800px){
     .areaContato{width: 100%;}
-    .areaSobre{width: 100%;}
-    .subAreaIntegrantes{ position: inherit;}
 }
