--- a/src/Ecoffe.Frontend/src/app/views/about/about.component.css
+++ b/src/Ecoffe.Frontend/src/app/views/about/about.component.css
@@ -4,7 +4,6 @@ body {
     background-color: #242424;
     font-family: 'Ovo', serif;
     color: white;
-    font-size: 30px;
 }
 
 
@@ -12,7 +11,6 @@ body {
     height: 80%;
     width: 100%;
     border-radius: 2px;
-    margin-top: 50px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,121 +19,36 @@ body {
     
     
 }
+
 h1 {
-    font-family:'Ovo', serif;
-    color: white ;
     font-size: 50px;
     text-align: center;
     font-weight: 400;
+    padding: 100px;
 }
 
-h2 {
-    color:white;
-    font-size: 24px;
+.wrapper{
     text-align: center;
-    padding: 5px;
-    line-height: 30px;
-    font-family: 'Ovo', serif;
-}
-
-
-.areaContato h1{
-
-    font-family: 'Ovo', serif;
-    color: #242424;
-
-}
-
-form {
-    padding: 30px 4%;
-    box-shadow: 0 0 5px rgba(0,0, 0, 0.3);
-}
-
-#corpoEmail {
-    font-family: 'Ovo', serif;
-}
-.areaContato{
-    width: 20%;
-    float: left;
-    display: block;
-    margin-left: 100px;
-    margin-top: 110px;
-    font-family: 'Ovo', serif;
-    color: #242424;
-
-}
-
-.github {
-    width: 50px;
-    border-radius: 10px;
-    position: relative;
-    margin-bottom: -5px;
-    
-    
-}
-
-span {
-    font-size: 25px;
-    text-align: center;
-    position: relative;
-    margin-left: 250px;
-
-   
-}
-
-.areaContato textarea {
-    width: 40%;
-    height: 32px;
-    border-radius: 5px;
-    outline: none;
-    resize: none;
-    font-size: 16px;
-    font-family: 'Ovo', serif;
-    border-color: white;
-    
-    
-}
-
-.areaContato form input{
-    width: 50%;
-    height: 30px;
-    margin: 5px;
-    font-family: 'Ovo', serif;
-    border: 0;
-    border-bottom: hidden;
-    border-radius: 5px;
-    
-    
-}
-
-
-.areaContato form input[type="submit"]{
-    text-align: center;
-    color: white;
-    border-radius: 5px;
-    font-family: 'Ovo', serif;
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
-    border: none;
-    padding:10px;
-    cursor: pointer;
-    width: 150px;
-    height: 40px;
     background-color: #242424;
+    font-family: 'Ovo', serif;
+    color: #e3dbdb;
 }
 
-.areaContato form input[type="submit"]:hover{
-    background-color: rgb(126, 126, 126);
-    box-shadow:0 5px 0 #383838;
+.content{
+    display: inline-block;
+    width: 70%;
+    max-width: 1000px;
+    font-size: 25px;
+    line-height: normal;
 }
 
-.areaContato form textarea{
-    width: 100%;
-    height: 120px;
-    margin: 5px;
-
+a{
+    color: #fad585;
 }
-@media (max-width:800px){
-    .areaContato{width: 100%;}
+
+.contact{
+    width: 350px;
+    max-width: 90%;
+    position: absolute;
+    margin: 50px;
 }
