--- a/src/Ecoffe.Frontend/src/app/views/products/products.component.css
+++ b/src/Ecoffe.Frontend/src/app/views/products/products.component.css
@@ -1,32 +1,20 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 0;
+.products{
+    display: inline-flex;
+    flex-flow: wrap;
 }
 
-#menu-esq{
-    width: 20%;
+.product{
+    height: 180px;
+    width: 200px;
+    margin: 10px;
+   
 }
-li{
-    list-style-type:none;
-}
-h4{
-    color:rgb(117, 96, 66);
-}
-h3{
-    color:rgb(117, 96, 66);
 
+.wrapperImg{
+    text-align: center;
 }
-#produtos{
-    position: relative;
-    bottom: 100%;
-    width: 50%;
-    left: 40%;
-}
-#pproduto1{
-    position: absolute;
-    bottom: 100%;
-}
-img{
-    width: 150px;
-    padding: 10px;
+
+.wrapperImg > img{
+    height: 100px;
+    width: auto;
 }
