--- a/src/Ecoffe.Frontend/src/app/views/account/account.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/account/account.component.html
@@ -12,6 +12,6 @@
 
 <app-card-list *ngIf="areaType == 3"></app-card-list>
 
-<app-footer></app-footer>
+<app-footer style="display: none;"></app-footer>
 
 <app-cart-sidenav></app-cart-sidenav>
