--- a/src/Ecoffe.Frontend/src/app/views/home/home.component.html
+++ b/src/Ecoffe.Frontend/src/app/views/home/home.component.html
@@ -48,5 +48,5 @@
     </section>
 </mat-card>
 <br><br>
-<app-footer></app-footer>
+<app-footer style="display: none;"></app-footer>
 <app-cart-sidenav></app-cart-sidenav>
